# nixos-config

./: .gitattributes  .gitignore  .sops.yaml  LICENSE  README.md  cache-priv-key.pem  cache-pub-key.pem  flake.nix  treefmt.toml
.forgejo/workflows/: draugr.yml  fenrir.yml  install-iso.yaml  main.yml  nixgard.yml  tyr.yaml  update-flake.yml
.github/: dependabot.yml
.github/workflows/: clean.yaml  draugr.yml  fenrir.yml  install-iso.yaml  main.yml  nixgard.yml  tyr.yaml  update-flake.yml
home/: coder.nix  default.nix  rszamszur.nix
hosts/draugr/: README.md  configuration.nix  hardware-configuration.nix
hosts/fenrir/: configuration.nix  hardware-configuration.nix  install.sh  rc.lua
hosts/hades/: configuration.nix  hardware-configuration.nix
images/: flake-module.nix
lib/: default.nix  sources.nix  trivial.nix
modules/: acme.nix  binary-cache.nix  cache.nix  chrome.nix  comin.nix  common.nix  default.nix  dns.nix  docker.nix  duplicati.nix  forgejo-runners.nix  gaming.nix  github-runners.nix  home-manager.nix  kvm.nix  laptop.nix  local-llm.nix  nas.nix  podman.nix  raspberry.nix  rbe.nix  remarkable.nix  remote-builder.nix  remote-gaming.nix  sound.nix  vbox.nix  vscode.nix  wireguard.nix  zen-browser.nix  zerotier.nix
overlays/: hyprland.nix  lunar-lake-firmware-fix.nix  mylib.nix  ncps.nix  pkgs.nix  poetry2nix.nix
pkgs/: flake-module.nix
scripts/: monitors.sh  remarkable_backup.sh
shells/: default.nix  flake-module.nix  js.nix  py3-pip.nix  py3-poetry.nix  ruby.nix
templates/uv2nix/: TODO  build.nix  flake.nix  image.nix  pyproject.toml
(+59 files in other folders)
